<resources>
    <string name="app_name">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hosgeldiniz">Hoş Geldiniz</string>
    <string name="okudugun_kitap_sayisi">Okuduğun Kitap Sayısı</string>
    <string name="okumayi_hedefledigin_kitap_sayisi">Okumayı Hedeflediğin\n Kitap Sayısı</string>
    <string name="guluk_okunacak_kitap_sayisi">Günlük Okunacak Sayfa\n Sayısı</string>
    <string name="okumaya_devam_ettigin_kitap_sayisi">Okumaya Devam ettiğin\n Kitap Sayısı</string>
    <string name="okunacak_kitaplar">Okunacak Kitaplar</string>
    <string name="okunan_kitaplar">Okunan Kitaplar</string>
    <string name="ogrenci">Öğrenci</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="baslik">Book Title</string>
    <string name="eklendi">added</string>
    <string name="yorum">comment</string>
    <string name="ekleme">add</string>
    <string name="yorum_alani">Yorum alanı...</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="login_page">Login Page</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
</resources>