<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bookCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_5dp"
    app:cardElevation="@dimen/_6dp"
    app:contentPadding="@dimen/_5dp"
    style="@style/CardView.Dark"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/email">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/imageViewBook"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_120dp"
            android:src="@drawable/library_icon_foreground" />


        <TextView
            android:id="@+id/textViewtitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageViewBook"
            android:maxLines="1"
            android:text="@string/baslik"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/textViewAuthor"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewtitle"
            android:layout_toEndOf="@id/imageViewBook"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/author" />

        <TextView
            android:id="@+id/textViewCategory"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAuthor"
            android:layout_toEndOf="@id/imageViewBook"
            android:maxLines="1"
            android:text="@string/category" />

        <ImageButton
            android:id="@+id/imageButtonAdd"
            android:layout_width="@dimen/_79dp"
            android:layout_height="@dimen/_67dp"
            android:layout_below="@id/textViewCategory"
            android:layout_toEndOf="@id/imageViewBook"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ekleme"
            android:contextClickable="true"
            android:padding="@dimen/_5dp"
            android:src="@drawable/baseline_bookmark_add_24" />

        <ImageButton
            android:id="@+id/imageButtonAdded"
            android:layout_width="@dimen/_79dp"
            android:layout_height="@dimen/_67dp"
            android:layout_below="@id/textViewCategory"
            android:layout_toEndOf="@id/imageButtonAdd"
            android:background="@android:color/transparent"
            android:contentDescription="@string/eklendi"
            android:padding="@dimen/_5dp"
            android:src="@drawable/baseline_bookmark_added_24" />

        <ImageButton
            android:id="@+id/imageButtonComment"
            android:layout_width="@dimen/_79dp"
            android:layout_height="@dimen/_67dp"
            android:layout_below="@id/textViewCategory"
            android:layout_toEndOf="@id/imageButtonAdded"
            android:background="@android:color/transparent"
            android:contentDescription="@string/yorum"
            android:padding="@dimen/_5dp"
            android:src="@drawable/baseline_comment_24" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>